[project]
name = "hospital-resource-env"
version = "0.1.0"
description = "Hospital Resource Environment"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"