[project]
name = "hospital-resource-env"
version = "0.1.0"
description = "Hospital Resource Environment — Meta PyTorch Hackathon submission"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "numpy>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
